--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,8 @@
   </head>
   <body>
     <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <a href="1-timer.html">timer</a>
+    <a href="2-snackbar.html">Form</a>
+    <script type="module" src="/src/js/1-timer.js"></script>
   </body>
 </html>
