--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <!-- <load src="./partials/header.html" icon-path="img/sprite.svg#logo" /> -->
+    <a href="./1-timer.html">Timer</a>
+    <a href="./2-snackbar.html">Form</a>
   </body>
 </html>
